# game-console

./: .gitignore  CMakeLists.txt  README.md  direnttest.c  etc.c  etc.h  game-bazi.txt  game.c  game.h  gamelist.c  gamelist.h  main.c  map-bazi.txt  map.c  map.h  move.c  move.h  objects.c  objects.h  render.c  render.h  rule.c  rule.h  run.bat  run.c  run.h  sdltest.c  vector.c  vector.h
Games/: game-bazi.txt  map-bazi.txt
